--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<button class="btn btn-primary">test</button>
+<app-header></app-header>
+<div class="container pt-5 pb-5" style="min-height: 81vb">
+  <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
