--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<div class="container-fluid bg-dark text-center p-2">
+  <p class="text-white pt-2">2023 &copy; Ahmed Shaaban ( 00201090116463 )</p>
+</div>
