--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -1,1 +1,74 @@
-<p>login-page works!</p>
+<div class="m-auto" style="max-width: 600px">
+  <form #loginForm="ngForm" (ngSubmit)="submitLogin(loginForm)">
+    <label for="formEmail" class="form-label">Email</label>
+    <input
+      type="email"
+      [ngClass]="{
+        'is-valid': email.touched && !email.invalid,
+        'is-invalid': email.touched && email.invalid
+      }"
+      class="form-control"
+      id="formEmail"
+      name="email"
+      placeholder="ahmed@gmail.com"
+      ngModel
+      #email="ngModel"
+      required
+      email
+    />
+
+    <div class="valid-feedback" *ngIf="email.touched && !email.invalid">
+      Looks good!
+    </div>
+    <div class="invalid-feedback" *ngIf="email.touched && email.invalid">
+      <small *ngIf="email.errors?.['required']"> email is required </small>
+      <small *ngIf="email.errors?.['email']">
+        please enter a valid email format</small
+      >
+    </div>
+    <label for="formPassword" class="form-label mt-3">Password</label>
+    <input
+      type="password"
+      [ngClass]="{
+        'is-valid': password.touched && !password.invalid,
+        'is-invalid': password.touched && password.invalid
+      }"
+      class="form-control"
+      id="formPassword"
+      name="password"
+      placeholder="enter your password"
+      ngModel
+      #password="ngModel"
+      required
+      minlength="8"
+      maxlength="32"
+    />
+
+    <div class="valid-feedback" *ngIf="password.touched && !password.invalid">
+      Looks good!
+    </div>
+    <div class="invalid-feedback" *ngIf="password.touched && password.invalid">
+      <small *ngIf="password.errors?.['required']">
+        password is required
+      </small>
+      <small *ngIf="password.errors?.['minlength']">
+        password must be more than 7 characters
+      </small>
+      <small *ngIf="password.errors?.['maxlength']">
+        password must be less than 33 characters
+      </small>
+    </div>
+    <div class="mt-3">
+      <button
+        class="btn btn-primary w-100"
+        type="submit"
+        [disabled]="loginForm.invalid"
+      >
+        Login
+      </button>
+    </div>
+  </form>
+  <p class="text-center mt-3">
+    Do you have an account? <a routerLink="/register">Register Now</a>
+  </p>
+</div>
