add registration form

--- a/src/app/login-page/login-page.component.html
+++ b/src/app/login-page/login-page.component.html
@@ -69,6 +69,6 @@
     </div>
   </form>
   <p class="text-center mt-3">
-    Do you have an account? <a routerLink="/register">Register Now</a>
+    Don't have an account? <a routerLink="/register">Register Now</a>
   </p>
 </div>
