--- a/src/app/register-page/register-page.component.html
+++ b/src/app/register-page/register-page.component.html
@@ -1,1 +1,235 @@
-<p>register-page works!</p>
+<div class="m-auto" style="max-width: 600px">
+  <form [formGroup]="registerForm" (ngSubmit)="submitRegister()">
+    <label for="fullName" class="form-label">Full Name</label>
+    <input
+      type="text"
+      [ngClass]="{
+        'is-valid':
+          registerForm.controls['name'].touched &&
+          !registerForm.controls['name'].invalid,
+        'is-invalid':
+          registerForm.controls['name'].touched &&
+          registerForm.controls['name'].invalid
+      }"
+      class="form-control"
+      id="fullName"
+      name="fullName"
+      placeholder="ahmed shaaban"
+      formControlName="name"
+    />
+
+    <div
+      class="valid-feedback"
+      *ngIf="
+        registerForm.controls['name'].touched &&
+        !registerForm.controls['name'].invalid
+      "
+    >
+      Looks good!
+    </div>
+    <div
+      class="invalid-feedback"
+      *ngIf="
+        registerForm.controls['name'].touched &&
+        registerForm.controls['name'].invalid
+      "
+    >
+      <small *ngIf="registerForm.controls['name'].errors?.['required']">
+        full name is required
+      </small>
+      <small *ngIf="registerForm.controls['name'].errors?.['minlength']">
+        full name must be more than 3 characters
+      </small>
+      <small *ngIf="registerForm.controls['name'].errors?.['pattern']">
+        only letters and spaces are allowed
+      </small>
+    </div>
+    <label for="email" class="form-label mt-3">email</label>
+
+    <input
+      type="email"
+      [ngClass]="{
+        'is-valid':
+          registerForm.controls['email'].touched &&
+          !registerForm.controls['email'].invalid,
+        'is-invalid':
+          registerForm.controls['email'].touched &&
+          registerForm.controls['email'].invalid
+      }"
+      class="form-control"
+      id="email"
+      name="email"
+      placeholder="ahmed@gmail.com"
+      formControlName="email"
+    />
+
+    <div
+      class="valid-feedback"
+      *ngIf="
+        registerForm.controls['email'].touched &&
+        !registerForm.controls['email'].invalid
+      "
+    >
+      Looks good!
+    </div>
+    <div
+      class="invalid-feedback"
+      *ngIf="
+        registerForm.controls['email'].touched &&
+        registerForm.controls['email'].invalid
+      "
+    >
+      <small *ngIf="registerForm.controls['email'].errors?.['required']">
+        email is required
+      </small>
+      <small *ngIf="registerForm.controls['email'].errors?.['pattern']">
+        you must enter a valid email format
+      </small>
+    </div>
+    <label for="username" class="form-label mt-3">username</label>
+
+    <input
+      type="text"
+      [ngClass]="{
+        'is-valid':
+          registerForm.controls['username'].touched &&
+          !registerForm.controls['username'].invalid,
+        'is-invalid':
+          registerForm.controls['username'].touched &&
+          registerForm.controls['username'].invalid
+      }"
+      class="form-control"
+      id="username"
+      name="username"
+      placeholder="ahmed3300"
+      formControlName="username"
+    />
+
+    <div
+      class="valid-feedback"
+      *ngIf="
+        registerForm.controls['username'].touched &&
+        !registerForm.controls['username'].invalid
+      "
+    >
+      Looks good!
+    </div>
+    <div
+      class="invalid-feedback"
+      *ngIf="
+        registerForm.controls['username'].touched &&
+        registerForm.controls['username'].invalid
+      "
+    >
+      <small *ngIf="registerForm.controls['username'].errors?.['required']">
+        username is required
+      </small>
+      <small *ngIf="registerForm.controls['username'].errors?.['pattern']">
+        username must start with letters <br />
+        only letters and digits are allowed <br />
+        length should less than 30
+      </small>
+    </div>
+    <label for="password" class="form-label mt-3">Password</label>
+    <input
+      type="password"
+      [ngClass]="{
+        'is-valid':
+          registerForm.controls['password'].touched &&
+          !registerForm.controls['password'].invalid,
+        'is-invalid':
+          registerForm.controls['password'].touched &&
+          registerForm.controls['password'].invalid
+      }"
+      class="form-control"
+      id="password"
+      name="password"
+      placeholder="enter your password"
+      formControlName="password"
+    />
+
+    <div
+      class="valid-feedback"
+      *ngIf="
+        registerForm.controls['password'].touched &&
+        !registerForm.controls['password'].invalid
+      "
+    >
+      Looks good!
+    </div>
+    <div
+      class="invalid-feedback"
+      *ngIf="
+        registerForm.controls['password'].touched &&
+        registerForm.controls['password'].invalid
+      "
+    >
+      <small *ngIf="registerForm.controls['password'].errors?.['required']">
+        password is required
+      </small>
+      <small *ngIf="registerForm.controls['password'].errors?.['pattern']">
+        password must contains at least one lowercase , one uppercase <br />
+        at least one digit and special character (*@%$#)
+      </small>
+    </div>
+    <label for="confirmPassword" class="form-label mt-3"
+      >Confirm Password</label
+    >
+    <input
+      type="password"
+      [ngClass]="{
+        'is-valid':
+          registerForm.controls['confirmPassword'].touched &&
+          !registerForm.controls['confirmPassword'].invalid,
+        'is-invalid':
+          registerForm.controls['confirmPassword'].touched &&
+          registerForm.controls['confirmPassword'].invalid
+      }"
+      class="form-control"
+      id="confirmPassword"
+      name="confirmPassword"
+      placeholder="confirm your password"
+      formControlName="confirmPassword"
+    />
+
+    <div
+      class="valid-feedback"
+      *ngIf="
+        registerForm.controls['confirmPassword'].touched &&
+        !registerForm.controls['confirmPassword'].invalid
+      "
+    >
+      Looks good!
+    </div>
+    <div
+      class="invalid-feedback"
+      *ngIf="
+        registerForm.controls['confirmPassword'].touched &&
+        registerForm.controls['confirmPassword'].invalid
+      "
+    >
+      <small
+        *ngIf="registerForm.controls['confirmPassword'].errors?.['required']"
+      >
+        confirm password is required
+      </small>
+      <small
+        *ngIf="registerForm.controls['confirmPassword'].errors?.['passwordMismatch']"
+      >
+        confirm password didn't match the password
+      </small>
+    </div>
+    <div class="mt-3">
+      <button
+        class="btn btn-primary w-100"
+        type="submit"
+        [disabled]="registerForm.invalid"
+      >
+        Register
+      </button>
+    </div>
+  </form>
+  <p class="text-center mt-3">
+    Do you have an account? <a routerLink="/login">Login</a>
+  </p>
+</div>
