--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-danger" data-bs-theme="dark">
+<nav class="navbar navbar-expand-lg bg-danger sticky-top" data-bs-theme="dark">
   <div class="container">
     <a class="navbar-brand" routerLink="/">Angular Ecommerce</a>
     <button
@@ -29,7 +29,8 @@
             routerLinkActive="activeLink"
             [routerLinkActiveOptions]="{ exact: true }"
             routerLink="cart"
-            >Cart</a
+            ><sup>({{ counter }})</sup> Cart
+            <sub>{{ totalPrice | currency : " EGP " }}</sub></a
           >
         </li>
         <li class="nav-item">
