--- a/src/app/single-product/single-product.component.html
+++ b/src/app/single-product/single-product.component.html
@@ -2,7 +2,7 @@
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a routerLink="/">Shop</a></li>
     <li class="breadcrumb-item active" aria-current="page">
-      {{ product.title }}
+      {{ product?.title }}
     </li>
   </ol>
 </nav>
@@ -11,53 +11,62 @@
     <span
       class="bg-danger text-white p-1 pe-2 ps-2 rounded-3 d-inline position-absolute mt-3 me-4 end-0"
     >
-      {{ product.discountPercentage }}% OFF
+      {{ product?.discountPercentage }}% OFF
     </span>
     <img
-      [src]="product.thumbnail"
-      [alt]="product.title"
+      [src]="product?.thumbnail"
+      [alt]="product?.title"
       class="w-100 rounded-3"
       style="height: 350px"
     />
     <div class="row g-4 mt-2">
       <img
         [src]="img"
-        [alt]="product.title"
-        class="col-3"
-        *ngFor="let img of product.images"
+        [alt]="product?.title"
+        class="col-3 img-fluid"
+        style="max-height: 100px"
+        *ngFor="let img of product?.images"
         (click)="changeImage(img)"
       />
     </div>
   </div>
   <div class="col-md-7 ps-lg-5 ps-md-3">
-    <h1>{{ product.title }}</h1>
-    <p class="mt-3 mb-3">{{ product.description }}</p>
+    <h1>{{ product?.title }}</h1>
+    <p class="mt-3 mb-3">{{ product?.description }}</p>
     <h4>
-      Price: {{ product.price | currency : " EGP " }}
+      Price: {{ product?.price | currency : " EGP " }}
       <span class="text-decoration-line-through ms-4" style="color: #999">
         {{
-          product.price
-            | regularPrice : product.discountPercentage
+          product?.price
+            | regularPrice : product?.discountPercentage
             | currency : " EGP "
         }}
       </span>
     </h4>
-    <h5>Rating: {{ product.rating }}</h5>
+    <h5>Rating: {{ product?.rating }}</h5>
     <button
       class="mt-4 mb-4 btn btn-success me-3"
-      [disabled]="product.stock ? false : true"
+      *ngIf="!isInCart"
+      (click)="addProductToCart()"
     >
       Add to cart
     </button>
+    <button
+      class="mt-4 mb-4 btn btn-danger me-3"
+      *ngIf="isInCart && product?.stock"
+    >
+      Added to cart
+    </button>
+
     <span
-      [ngClass]="product.stock ? 'text-success' : 'text-danger'"
+      [ngClass]="product?.stock ? 'text-success' : 'text-danger'"
       class="fw-bold"
     >
-      ({{ product.stock }}) {{ product.stock | stock }}
+      ({{ product?.stock }}) {{ product?.stock | stock }}
     </span>
     <div class="d-flex">
-      <span class="me-3">Brand: {{ product.brand }}</span>
-      <span>Category: {{ product.category }}</span>
+      <span class="me-3">Brand: {{ product?.brand }}</span>
+      <span>Category: {{ product?.category }}</span>
     </div>
   </div>
 </div>
