--- a/src/app/register-page/register-page.component.html
+++ b/src/app/register-page/register-page.component.html
@@ -219,15 +219,9 @@
         confirm password didn't match the password
       </small>
     </div>
-    <div class="mt-3">
-      <button
-        class="btn btn-primary w-100"
-        type="submit"
-        [disabled]="registerForm.invalid"
-      >
-        Register
-      </button>
-    </div>
+      <div class="mt-3">
+        <button class="btn btn-primary w-100" type="submit">Register</button>
+      </div>
   </form>
   <p class="text-center mt-3">
     Do you have an account? <a routerLink="/login">Login</a>
